Escape URLs, for usernames with spaces